@@ -6,6 +6,7 @@ import java.awt.geom.Rectangle2D;
 
 import edu.colorado.phet.beerslawlab.common.BLLConstants;
 import edu.colorado.phet.beerslawlab.common.model.Solute;
+import edu.colorado.phet.beerslawlab.common.model.Solution;
 import edu.colorado.phet.beerslawlab.concentration.model.ConcentrationSolution;
 import edu.colorado.phet.beerslawlab.common.model.Solvent;
 import edu.colorado.phet.beerslawlab.concentration.model.Beaker;
@@ -48,7 +49,7 @@ class StockSolutionNode extends PPath {
         // set color to match solute
         solute.addObserver( new SimpleObserver() {
             public void update() {
-                Color color = ConcentrationSolution.createColor( solvent, solute.get(), solute.get().stockSolutionConcentration );
+                Color color = Solution.createColor( solvent, solute.get(), solute.get().stockSolutionConcentration );
                 setPaint( color );
                 setStrokePaint( BLLConstants.createFluidStrokeColor( color ) );
             }
