@@ -1,3 +1,4 @@
+2/14/12 base class for solutions
 2/14/12 add stroke around color chips in combo boxes, sames as for fluids
 2/14/12 add pure water to the list of solutions (even though it's not technically a solution)
 2/14/12 use different solution models for the 2 tabs, needs are very different
